deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zakhar-otus-kuber-lab  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zakhar-otus-kuber-lab
  template:
    metadata:
      labels:
        app: zakhar-otus-kuber-lab
    spec:
      containers:
      - name: zakhar-otus-kuber-lab
        image: zakharl/otuskuberlab:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zakhar-otus-kuber-lab  
spec:
  type: ClusterIP
  selector:
    app: zakhar-otus-kuber-lab
  ports:
  - port: 80
    targetPort: 80
